--- a/pom.xml
+++ b/pom.xml
@@ -111,8 +111,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -207,10 +207,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<!--<version>2.18.1</version>-->
+				<version>3.0.0-M7</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
+					<argLine>-Xms512m -Xmx2048m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -312,7 +314,7 @@
 				<configuration>
 					<linkXref>true</linkXref>
 					<sourceEncoding>UTF-8</sourceEncoding>
-					<targetJdk>1.6</targetJdk>
+					<targetJdk>1.7</targetJdk>
 					<skipEmptyReport>false</skipEmptyReport>
 					<minimumTokens>50</minimumTokens>
 				</configuration>
@@ -469,7 +471,7 @@
 			</build>
 		</profile>
 		<profile>
-			<id>use 1.6 compiler</id>
+			<id>use 1.7 compiler</id>
 			<activation>
 				<file>
 					<exists>/usr/lib/jvm/java-6-openjdk-amd64/bin/javac</exists>
@@ -482,8 +484,8 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.3</version>
 						<configuration>
-							<source>1.6</source>
-							<target>1.6</target>
+							<source>1.7</source>
+							<target>1.7</target>
 							<verbose>true</verbose>
 							<fork>true</fork>
 							<executable>/usr/lib/jvm/java-6-openjdk-amd64/bin/javac</executable>
