--- a/pom.xml
+++ b/pom.xml
@@ -220,10 +220,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<!--<version>2.18.1</version>-->
+				<version>3.0.0-M7</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
+					<argLine>-Xms512m -Xmx2048m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
