--- a/build.gradle
+++ b/build.gradle
@@ -12,14 +12,16 @@ subprojects {
 	targetCompatibility = 1.7
 	
 	repositories {
+		google()
+		mavenCentral()
 		jcenter()
 	}
 	
 	dependencies {
-		testCompile group: 'junit', name: 'junit', version: '4.12'
+		testImplementation group: 'junit', name: 'junit', version: '4.12'
 	}
 }
 
-task wrapper(type: Wrapper) {
+/*task wrapper(type: Wrapper) {
 	gradleVersion = "4.4.1"
-}
+}*/
