--- a/nanolets/build.gradle
+++ b/nanolets/build.gradle
@@ -1,7 +1,7 @@
 description = 'NanoHttpd-nano application server'
 
 dependencies {
-	compile project(':nanohttpd')
+	implementation project(':nanohttpd')
 	
-	testCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
+	testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
 }
