--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,8 +1,8 @@
 description = 'NanoHttpd-Samples'
 
 dependencies {
-	compile project(':nanohttpd')
-	compile project(':nanohttpd-webserver')
+	implementation project(':nanohttpd')
+	implementation project(':nanohttpd-webserver')
 }
 
 task wrapper(type: Wrapper) {
