--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,3 +8,6 @@ dependencies {
 /*task wrapper(type: Wrapper) {
 	gradleVersion = "4.4.1"
 }*/
+tasks.register("wrapper", Wrapper) {
+	gradleVersion = "4.4.1"
+}
