--- a/fileupload/build.gradle
+++ b/fileupload/build.gradle
@@ -12,6 +12,9 @@ dependencies {
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.4.1'
 }
 
-task wrapper(type: Wrapper) {
+/*task wrapper(type: Wrapper) {
+	gradleVersion = "4.4.1"
+}*/
+tasks.register("wrapper", Wrapper) {
 	gradleVersion = "4.4.1"
 }
