--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -5,6 +5,9 @@ dependencies {
 	implementation project(':nanohttpd-webserver')
 }
 
-task wrapper(type: Wrapper) {
+/*task wrapper(type: Wrapper) {
+	gradleVersion = "4.4.1"
+}*/
+tasks.register("wrapper", Wrapper) {
 	gradleVersion = "4.4.1"
 }
