--- a/websocket/build.gradle
+++ b/websocket/build.gradle
@@ -6,6 +6,9 @@ dependencies {
 	testImplementation group: 'org.eclipse.jetty.websocket', name: 'websocket-client', version: '9.3.0.M2'
 }
 
-task wrapper(type: Wrapper) {
+/*task wrapper(type: Wrapper) {
+	gradleVersion = "4.4.1"
+}*/
+tasks.register("wrapper", Wrapper) {
 	gradleVersion = "4.4.1"
 }
