--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
+/***
+ * Plugin repositories are required to be defined in settings.gradle
+ * moved the common build configs for all/subprojects to common.gradle ext scripts
+ */
+plugins {
+	id 'com.android.application' version '7.0.4' apply false
+	id 'com.android.library' version '7.0.4' apply false
+	id 'org.jetbrains.kotlin.android' version '2.0.20' apply false
+}
 allprojects {
 	apply plugin: 'java'
 	apply plugin: 'idea'
-	
+
 	group = 'org.nanohttpd'
 	version = '2.3.2-SNAPSHOT'
 }
@@ -17,7 +26,7 @@ subprojects {
 	repositories {
 		google()
 		mavenCentral()
-		//jcenter()
+		jcenter()
 	}
 	
 	dependencies {
