--- a/markdown-plugin/build.gradle
+++ b/markdown-plugin/build.gradle
@@ -1,14 +1,8 @@
 description = 'NanoHttpd-Webserver-Markdown-Plugin'
-
+apply from: "$rootDir/common.gradle"
+usejavapluginconfig(project)
 dependencies {
 	implementation group: 'org.pegdown', name: 'pegdown', version: '1.4.1'
 	compileOnly project(':nanohttpd')
 	compileOnly project(':nanohttpd-webserver')
-}
-
-/*task wrapper(type: Wrapper) {
-	gradleVersion = "4.4.1"
-}*/
-tasks.register("wrapper", Wrapper) {
-	gradleVersion = "4.4.1"
 }
