--- a/common.gradle
+++ b/common.gradle
@@ -6,9 +6,27 @@ ext.usejavapluginconfig = { project ->
         sourceCompatibility = JavaVersion.VERSION_11
         targetCompatibility = JavaVersion.VERSION_11
     }
-    project.dependencies {
-        testImplementation group: 'junit', name: 'junit', version: '4.12'
+    project.repositories{
+        google()
+        mavenCentral()
+        jcenter()
     }
+    project.allprojects{
+        apply plugin: 'java'
+        apply plugin: 'idea'
+        repositories{
+            google()
+            mavenCentral()
+            jcenter()
+        }
+        dependencies {
+            testImplementation group: 'junit', name: 'junit', version: '4.12'
+        }
+    }
+    project.subprojects {
+
+    }
+
     project.tasks.withType(JavaCompile).configureEach {
         options.compilerArgs += "-Xlint:deprecation"
     }
@@ -18,4 +36,8 @@ ext.usejavapluginconfig = { project ->
 }
 ext.useandroidpluginconfig = { project ->
     project.apply plugin: 'com.android.library'
+    //project.apply plugin: 'org.jetbrains.kotlin.android'
+    project.tasks.register("wrapper", Wrapper) {
+        gradleVersion = "4.4.1"
+    }
 }
