--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,10 +1,6 @@
 description = 'NanoHttpd-Core'
-apply plugin: 'java'
-apply plugin: 'idea'
-java {
-	sourceCompatibility = JavaVersion.VERSION_11
-	targetCompatibility = JavaVersion.VERSION_11
-}
+apply from: "$rootDir/common.gradle"
+usejavapluginconfig(project)
 dependencies {
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.5'
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.2.5'
@@ -13,6 +9,6 @@ dependencies {
 /*task wrapper(type: Wrapper) {
 	gradleVersion = "4.4.1"
 }*/
-tasks.register("wrapper", Wrapper) {
+/*tasks.register("wrapper", Wrapper) {
 	gradleVersion = "4.4.1"
-}
+}*/
