--- a/fileupload/build.gradle
+++ b/fileupload/build.gradle
@@ -1,5 +1,6 @@
 description = 'NanoHttpd-apache file upload integration'
-
+apply from: "$rootDir/common.gradle"
+usejavapluginconfig(project)
 dependencies {
 	implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
 	
@@ -10,11 +11,4 @@ dependencies {
 	testImplementation group: 'javax.servlet', name: 'servlet-api', version: '2.5'
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.4.1'
-}
-
-/*task wrapper(type: Wrapper) {
-	gradleVersion = "4.4.1"
-}*/
-tasks.register("wrapper", Wrapper) {
-	gradleVersion = "4.4.1"
 }
