--- a/nanolets/build.gradle
+++ b/nanolets/build.gradle
@@ -1,7 +1,7 @@
 description = 'NanoHttpd-nano application server'
-
+apply from: "$rootDir/common.gradle"
+usejavapluginconfig(project)
 dependencies {
 	implementation project(':nanohttpd')
-	
 	testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
 }
