--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -1,13 +1,7 @@
 description = 'NanoHttpd-Samples'
-
+apply from: "$rootDir/common.gradle"
+usejavapluginconfig(project)
 dependencies {
 	implementation project(':nanohttpd')
 	implementation project(':nanohttpd-webserver')
-}
-
-/*task wrapper(type: Wrapper) {
-	gradleVersion = "4.4.1"
-}*/
-tasks.register("wrapper", Wrapper) {
-	gradleVersion = "4.4.1"
 }
