--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,7 @@ include ':nanohttpd-websocket'
 include ':nanohttpd-webserver-markdown-plugin'
 include ':nanohttpd-nanolets'
 include ':nanohttpd-apache-fileupload'
+//include ':nanohttpd-webserver-android'
 
 project(':nanohttpd').projectDir = "$rootDir/core" as File
 project(':nanohttpd-samples').projectDir = "$rootDir/samples" as File
@@ -20,3 +21,4 @@ project(':nanohttpd-websocket').projectDir = "$rootDir/websocket" as File
 project(':nanohttpd-webserver-markdown-plugin').projectDir = "$rootDir/markdown-plugin" as File
 project(':nanohttpd-nanolets').projectDir = "$rootDir/nanolets" as File
 project(':nanohttpd-apache-fileupload').projectDir = "$rootDir/fileupload" as File
+//project(':nanohttpd-webserver-android').projectDir = "$rootDir/webserver/android-app-lib" as File
