AAR library with minSdkVersion 28 is setup to build. This is incremental commit toward building android libraries targeted for use directly as android application dependencies as apposed to building as an AOSP system APEX library. Currently uses a copied src directory to compile the webserver. Source sets will be updated to specifically pull from each submodule aka project as next itterations to the build process proceed. Currently if linting is enabled it fails. The android module will be refactored, please avoid merging from this commit and await until I commit with a clean android library build as a fully separate build module project folder

--- a/common.gradle
+++ b/common.gradle
@@ -35,8 +35,32 @@ ext.usejavapluginconfig = { project ->
     }
 }
 ext.useandroidpluginconfig = { project ->
-    project.apply plugin: 'com.android.library'
+    //project.apply plugin: 'com.android.application'
     //project.apply plugin: 'org.jetbrains.kotlin.android'
+    //apply plugin: 'com.android.library'
+    project.repositories{
+        google()
+        mavenCentral()
+        jcenter()
+    }
+    project.allprojects{
+        apply plugin: 'com.android.library'
+        //apply plugin: 'org.jetbrains.kotlin.android'
+        //apply plugin: 'com.android.application'
+        repositories{
+            google()
+            mavenCentral()
+            jcenter()
+        }
+        dependencies {
+            testImplementation group: 'junit', name: 'junit', version: '4.12'
+           // implementation project(':nanohttpd')
+            //testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
+        }
+    }
+    project.subprojects {
+
+    }
     project.tasks.register("wrapper", Wrapper) {
         gradleVersion = "4.4.1"
     }
