--- a/common.gradle
+++ b/common.gradle
@@ -34,10 +34,10 @@ ext.usejavapluginconfig = { project ->
         gradleVersion = "4.4.1"
     }
 }
+
+
+
 ext.useandroidpluginconfig = { project ->
-    //project.apply plugin: 'com.android.application'
-    //project.apply plugin: 'org.jetbrains.kotlin.android'
-    //apply plugin: 'com.android.library'
     project.repositories{
         google()
         mavenCentral()
@@ -48,14 +48,21 @@ ext.useandroidpluginconfig = { project ->
         //apply plugin: 'org.jetbrains.kotlin.android'
         //apply plugin: 'com.android.application'
         repositories{
-            google()
+           /* google()
             mavenCentral()
-            jcenter()
+            jcenter()*/
         }
         dependencies {
-            testImplementation group: 'junit', name: 'junit', version: '4.12'
-           // implementation project(':nanohttpd')
-            //testImplementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
+            //implementation project(':nanohttpd')
+            testImplementation 'junit:junit:4.13.2'
+            androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+                exclude group: 'com.android.support', module: 'support-annotations'
+            })
+            api 'com.android.support:support-compat:28.0.0'
+            //api 'com.android.support:appcompat-v7:24.2.1'
+            //androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+            //androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
         }
     }
     project.subprojects {
