--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ allprojects {
 }
 
 subprojects {
-
 }
 
 /*task wrapper(type: Wrapper) {
-	gradleVersion = "4.4.1"
+	//gradleVersion = "4.4.1"
+	gradleVersion = "7.0.2"
 }*/
