Moved the android library build to the root of project, added core, websocket,webserver , removed tests on the android library build. Confirmed library built.

--- a/android-app-lib/build.gradle
+++ b/android-app-lib/build.gradle
@@ -1,4 +1,4 @@
-description = 'NanoHttpd-Webserver-Android'
+description = 'LibNanoHttpd-Android'
 apply from: "$rootDir/common.gradle"
 useandroidpluginconfig(project)
 dependencies {
@@ -35,7 +35,10 @@ android {
             java.srcDirs = [] // Clear default srcDirs
             //java.srcDir(fileTree(dir: "${rootProject.projectDir}/core/src/main", include: '**/*.java'))
             //java.srcDir(fileTree(dir: "${rootProject.projectDir}/webserver/src/main/java", include: '**/*.java'))
+            java.srcDir(file("${rootProject.projectDir}/core/src/main"))
+            java.srcDir(file("${rootProject.projectDir}/websocket/src/main"))
             java.srcDir(file("${rootProject.projectDir}/webserver/src/main"))
+            //java.srcDir(file("${rootProject.projectDir}/webserver/src/test"))
         }
     }
 
