--- a/android-app-lib/build.gradle
+++ b/android-app-lib/build.gradle
@@ -23,7 +23,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
-        coreLibraryDesugaringEnabled true
+        coreLibraryDesugaringEnabled false
     }
 
     /*tasks.withType(JavaCompile).configureEach {
