--- a/common.gradle
+++ b/common.gradle
@@ -58,6 +58,7 @@ ext.useandroidpluginconfig = { project ->
                 exclude group: 'com.android.support', module: 'support-annotations'
             })
             api 'com.android.support:support-compat:28.0.0'
+            //coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
             //api 'com.android.support:appcompat-v7:24.2.1'
             //androidTestImplementation 'androidx.test.ext:junit:1.1.3'
             //androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
