--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
 	<parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
-		<version>7</version>
+		<!--<version>7</version>-->
+		<version>9</version>
 	</parent>
 	<groupId>org.nanohttpd</groupId>
 	<artifactId>nanohttpd-project</artifactId>
@@ -114,12 +115,13 @@
 			<extension>
 				<groupId>org.apache.maven.wagon</groupId>
 				<artifactId>wagon-ssh</artifactId>
-				<version>2.7</version>
+				<!--<version>2.7</version>-->
+				<version>3.3.4</version>
 			</extension>
 		</extensions>
 
 		<plugins>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
@@ -127,11 +129,21 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
+			</plugin>-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<!--<version>2.10.1</version>-->
+				<version>3.2.0</version>
 				<configuration>
 					<aggregate>false</aggregate>
 					<failOnError>false</failOnError>
@@ -148,7 +160,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
+				<!--<version>2.5.1</version>-->
+				<version>3.0.0-M1</version>
 				<configuration>
 					<mavenExecutorId>forked-path</mavenExecutorId>
 				</configuration>
@@ -156,7 +169,8 @@
 			<plugin>
 				<groupId>org.tinyjee.dim</groupId>
 				<artifactId>doxia-include-macro</artifactId>
-				<version>1.1</version>
+				<!--<version>1.1</version>-->
+				<version>1.3.1</version>
 				<executions>
 					<execution>
 						<id>initialize-doxia-include-macro</id>
@@ -170,7 +184,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.4</version>
+				<!--<version>3.4</version>-->
+				<version>3.12.0</version>
 				<configuration>
 					<chmod>false</chmod>
 				</configuration>
@@ -178,12 +193,14 @@
 					<dependency>
 						<groupId>org.apache.maven.wagon</groupId>
 						<artifactId>wagon-ssh</artifactId>
-						<version>2.7</version>
+						<!--<version>2.7</version>-->
+						<version>3.3.4</version>
 					</dependency>
 					<dependency>
 						<groupId>org.tinyjee.dim</groupId>
 						<artifactId>doxia-include-macro</artifactId>
-						<version>1.1</version>
+						<!--<version>1.1</version>-->
+						<version>1.3.1</version>
 					</dependency>
 					<dependency>
 						<groupId>net.ju-n.maven.doxia</groupId>
@@ -195,7 +212,8 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>1.7</version>
+				<!--<version>1.7</version>-->
+				<version>2.4.0</version>
 				<configuration>
 					<verbose>false</verbose>
 				</configuration>
@@ -231,7 +249,8 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.4.201502262128</version>
+				<!--<version>0.7.4.201502262128</version>-->
+				<version>0.8.12</version>
 				<executions>
 					<execution>
 						<id>default-prepare-agent</id>
@@ -275,7 +294,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
-				<version>2.8</version>
+				<!--<version>2.8</version>-->
+				<version>3.4</version>
 				<configuration>
 					<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
 					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
@@ -298,7 +318,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.1</version>
+				<!--<version>2.10.1</version>-->
+				<version>3.2.0</version>
 				<configuration>
 					<failOnError>false</failOnError>
 					<aggregate>false</aggregate>
@@ -314,7 +335,8 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.4</version>
+				<!--<version>2.4</version>-->
+				<version>3.1.1</version>
 				<configuration>
 					<linkJavadoc>true</linkJavadoc>
 					<skip>${nanohttpd.nonjavamodule}</skip>
@@ -323,11 +345,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-pmd-plugin</artifactId>
-				<version>3.2</version>
+				<!--<version>3.2</version>-->
+				<version>3.21.0</version>
 				<configuration>
 					<linkXref>true</linkXref>
 					<sourceEncoding>UTF-8</sourceEncoding>
-					<targetJdk>1.7</targetJdk>
+					<!--<targetJdk>1.7</targetJdk>-->
+					<targetJdk>11</targetJdk>
 					<skipEmptyReport>false</skipEmptyReport>
 					<minimumTokens>50</minimumTokens>
 				</configuration>
@@ -335,17 +359,30 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>taglist-maven-plugin</artifactId>
-				<version>2.4</version>
+				<!--<version>2.4</version>-->
+				<version>2.10</version>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>3.0.0</version>
+			</plugin>-->
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.8.0.0</version>
+				<configuration>
+					<effort>Max</effort>
+					<threshold>Low</threshold>
+					<failOnError>false</failOnError>
+					<xmlOutput>true</xmlOutput>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.4.201502262128</version>
+				<!--<version>0.7.4.201502262128</version>-->
+				<version>0.8.12</version>
 			</plugin>
 		</plugins>
 	</reporting>
@@ -397,7 +434,8 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>2.15</version>
+						<!--<version>2.15</version>-->
+						<version>3.1.2</version>
 						<configuration>
 							<configLocation>${project.basedir}/../src/main/checkstyle/nanohttpd-style.xml</configLocation>
 							<suppressionsLocation>${project.basedir}/../src/main/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
@@ -410,6 +448,7 @@
 					<plugin>
 						<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
 						<artifactId>maven-java-formatter-plugin</artifactId>
+						<!--<version>0.4</version>-->
 						<version>0.4</version>
 						<executions>
 							<execution>
@@ -430,7 +469,8 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-checkstyle-plugin</artifactId>
-						<version>2.15</version>
+						<!--<version>2.15</version>-->
+						<version>3.1.2</version>
 						<reportSets>
 							<reportSet>
 								<reports>
@@ -454,7 +494,8 @@
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>0.7.4.201502262128</version>
+						<!--<version>0.7.4.201502262128</version>-->
+						<version>0.8.12</version>
 						<executions>
 							<execution>
 								<id>merge-report</id>
@@ -478,16 +519,17 @@
 					<plugin>
 						<groupId>org.eluder.coveralls</groupId>
 						<artifactId>coveralls-maven-plugin</artifactId>
-						<version>3.1.0</version>
+						<!--<version>3.1.0</version>-->
+						<version>4.4.0</version>
 					</plugin>
 				</plugins>
 			</build>
 		</profile>
 		<profile>
-			<id>use 1.7 compiler</id>
+			<id>use 11 compiler</id>
 			<activation>
 				<file>
-					<exists>/usr/lib/jvm/java-7-openjdk-amd64/bin/javac</exists>
+					<exists>/usr/lib/jvm/java-11-openjdk-amd64/bin/javac</exists>
 				</file>
 			</activation>
 			<build>
@@ -497,11 +539,11 @@
 						<artifactId>maven-compiler-plugin</artifactId>
 						<version>3.3</version>
 						<configuration>
-							<source>1.7</source>
-							<target>1.7</target>
+							<source>11</source>
+							<target>11</target>
 							<verbose>true</verbose>
 							<fork>true</fork>
-							<executable>/usr/lib/jvm/java-7-openjdk-amd64/bin/javac</executable>
+							<executable>/usr/lib/jvm/java-11-openjdk-amd64/bin/javac</executable>
 						</configuration>
 					</plugin>
 				</plugins>
